objects/Playground__c.object
<CustomObject>
    <description>Stores data for customer&apos;s Playgrounds created from the Copado Customer Community</description>
    <fields>
        <fullName>All_Jobs_Completed__c</fullName>
        <formula>Playground_Jobs_Completed__c == 25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If all 25 jobs are completed (Status dependent) this checkbox evaluates to TRUE.</inlineHelpText>
        <label>All Jobs Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Sandboxes_Authorized__c</fullName>
        <formula>Sandboxes_Authorized__c == 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the &quot;SBs Authorized&quot; count is 6 formula evaluates to true</inlineHelpText>
        <label>All Sandboxes Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Sandboxes_Created__c</fullName>
        <formula>Sandboxes_Created__c == 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When 5 Sandboxes have been created (defined by the Action &quot;Create Environment&quot;) this Checkbox evaluates to TRUE.</inlineHelpText>
        <label>All Sandboxes Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Api_Key__c</fullName>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Hash__c</fullName>
        <description>The hash for the first commit (.gitignore) in Github.</description>
        <inlineHelpText>The hash for the first commit (.gitignore) in Github.</inlineHelpText>
        <label>Commit Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Playgrounds</relationshipLabel>
        <relationshipName>Playgrounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Signup_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is populated by the wizard when a signup request is created via playground so that ProcessBuilder can handle updates.</inlineHelpText>
        <label>Custom Signup Request</label>
        <referenceTo>Signup_Request__c</referenceTo>
        <relationshipLabel>Playgrounds</relationshipLabel>
        <relationshipName>Playgrounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <inlineHelpText>The contents of this field is displayed on the detail page in the community when a playground fails fatally (ie no retries are available).</inlineHelpText>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Git_Token__c</fullName>
        <description>Git token to call git provider api</description>
        <inlineHelpText>Git token to call git provider api</inlineHelpText>
        <label>Git Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Git_Username__c</fullName>
        <description>Git provider username.</description>
        <inlineHelpText>Git provider username.</inlineHelpText>
        <label>Git Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Organization__c</fullName>
        <description>Salesforce Organization ID where the Copado package was installed for the Playground.</description>
        <label>Install Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Username__c</fullName>
        <label>Installer Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process Builder will use this field to update the licenses.</description>
        <inlineHelpText>Link to the License record for easy reference and process builder usage.</inlineHelpText>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Playgrounds</relationshipLabel>
        <relationshipName>Playgrounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Playgrounds</relationshipLabel>
        <relationshipName>Playgrounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>LEFT(Org_Credential__r.copado__Environment__r.copado__Org_ID__c,15)</formula>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playground_Configuration__c</fullName>
        <inlineHelpText>Full configuration will create all records for your playground including the complete pipeline. Choose light configuration only if you have been specifically instructed to do so</inlineHelpText>
        <label>Playground Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Configuration</fullName>
                    <default>true</default>
                    <label>Full Configuration</label>
                </value>
                <value>
                    <fullName>Light Configuration</fullName>
                </value>
                <value>
                    <fullName>Full Configuration - Scratch Orgs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playground_Jobs_Completed__c</fullName>
        <label>Playground Jobs Completed</label>
        <summaryFilterItems>
            <field>Playground_Job__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Playground_Job__c.Playground__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sandboxes_Authorized__c</fullName>
        <inlineHelpText>Counts all the authorized sandboxes based on the status (set to Completed). If the count is 6 all SBs are authorized.</inlineHelpText>
        <label>Sandboxes Authorized</label>
        <summaryFilterItems>
            <field>Playground_Job__c.Action__c</field>
            <operation>equals</operation>
            <value>AuthorizeSandbox</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Playground_Job__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Playground_Job__c.Playground__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sandboxes_Created__c</fullName>
        <inlineHelpText>This counts the number of sandboxes that have been created. This is used to the later send out an email to the user.</inlineHelpText>
        <label>Sandboxes Created</label>
        <summaryFilterItems>
            <field>Playground_Job__c.Action__c</field>
            <operation>equals</operation>
            <value>CreateEnvironment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Playground_Job__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Playground_Job__c.Playground__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Indicates the stage of the playground creation. If stage is not Completed when a user returns to a playground the user will land the said stage.</description>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CreateTrialOrg</fullName>
                    <default>true</default>
                    <label>CreateTrialOrg</label>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>PostInstallScript</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                    <isActive>false</isActive>
                    <label>Install</label>
                </value>
                <value>
                    <fullName>Start</fullName>
                    <isActive>false</isActive>
                    <label>Start</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Org_Id__c</fullName>
        <formula>LEFT(Custom_Signup_Request__r.Created_Org_Id__c,15)</formula>
        <inlineHelpText>This is the Org ID derived from the Custom Signup Request record.</inlineHelpText>
        <label>Trial Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Playgrounds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Using_Trial_Org__c</fullName>
        <formula>AND(
 Trial_Org_Id__c == Org_Id__c,
 NOT(ISBLANK(Trial_Org_Id__c)),
 NOT(ISBLANK(Org_Id__c))
)</formula>
        <inlineHelpText>Validates if the Trial Org Id and the authenticated org Id are equal</inlineHelpText>
        <label>Using Trial Org</label>
        <type>Checkbox</type>
    </fields>
    <label>Playground</label>
    <listViews>
        <fullName>Active_Playgrounds</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Org_Credential__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Api_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <label>Active Playgrounds</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Org_Credential__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Api_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired_Playgrounds</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Org_Credential__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Api_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Playgrounds</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Org_Credential__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Api_Key__c</columns>
        <columns>Playground_Jobs_Completed__c</columns>
        <columns>Sandboxes_Authorized__c</columns>
        <columns>Trial_Org_Id__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/6/2020 12:00 AM</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>Stuck_Playgrounds</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Org_Credential__c</columns>
        <columns>Org_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Install,Setup</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Failed</value>
        </filters>
        <label>Stuck Playgrounds</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Playground Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playgrounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>